2009-03-23  Dan Winship  <danw@gnome.org>

	Bug 566530 - Handle (illegal) unencoded spaces in URIs

	* libsoup/soup-uri.c (uri_normalized_copy): optionally fix up
	parts with unencoded spaces in them.
	(soup_uri_new_with_base): tell uri_normalized_copy() to fix up
	spaces in the path and query components

	* tests/uri-parsing.c (abs_tests): test parsing and unparsing a
	URI with an unencoded space in it.

	* tests/redirect-test.c (tests, server_callback): add a test of
	redirecting to a URI with an unencoded space in it.

2009-03-15  Dan Winship  <danw@gnome.org>

	* configure.in: 2.26.0

	* NEWS: Update

2009-03-14  Xan Lopez  <xan@gnome.org>

        Add G_{BEGIN,END}_DECLS guards to public headers.

        * libsoup/soup-auth.h:
        * libsoup/soup-cookie-jar-sqlite.h:
        * libsoup/soup-cookie-jar-text.h:
        * libsoup/soup-proxy-resolver.h:

2009-03-11  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (soup_session_cancel_message): add more
	detail to the doc comment

	* libsoup/soup-message.c (SoupMessage): Note in the doc comment
	that reason phrases are not very useful, and should not be
	presented to the user.

	* libsoup/soup-status.c: add a comment explaining why reason
	phrases aren't localized. Also some misc doc fixes.
	(soup_status_get_phrase): Note in the doc comment that you
	shouldn't present reason phrases to the user.

2009-03-09  Dan Winship  <danw@gnome.org>

	Bug 571527 – gvfsd-http crashed with SIGSEGV in
	g_hash_table_lookup().

	As currently written, libproxy's gnome plugin causes intermittent
	gvfsd-http crashes, and I didn't have time to come up with either
	a fix or a workaround. So for 2.26.0 we will fall back to using
	the GConf-based proxy resolver. Hopefully to be fixed for 2.26.1.

	* configure.in: require both gconf and libproxy if building
	--with-gnome

	* libsoup/soup-proxy-resolver-gconf.c: bring this back.

	* libsoup/soup-gnome-features.c
	(soup_proxy_resolver_gnome_get_type): use gconf instead of